# sui-client-gen-aeon

generator/: Cargo.toml
generator/src/: framework_sources.rs  gen.rs  main.rs  model_builder.rs
move/amm/: Move.toml
move/custody/: Move.toml  publish-result.prod.json
move/custody/sources/: address_book.move  library.move  proposal.move  registration.move  user.move
ts/: package.json  pnpm-lock.yaml  tsconfig.json
ts/examples/yolo/_framework/: init-source.ts  reified.ts
ts/examples/yolo/aeon-custody/: index.ts  init.ts
ts/examples/yolo/aeon-custody/address-book/: functions.ts  structs.ts
ts/examples/yolo/aeon-custody/errors/: functions.ts
ts/examples/yolo/aeon-custody/module-interface/: functions.ts  structs.ts
ts/examples/yolo/aeon-custody/policy/: functions.ts  structs.ts
ts/examples/yolo/aeon-custody/proposal/: functions.ts  structs.ts
ts/examples/yolo/aeon-custody/registration/: functions.ts
ts/examples/yolo/aeon-custody/settings/: functions.ts  structs.ts
ts/examples/yolo/aeon-custody/tasks/: functions.ts  structs.ts
ts/examples/yolo/aeon-custody/transaction/: functions.ts  structs.ts
ts/examples/yolo/aeon-custody/user/: functions.ts  structs.ts
ts/examples/yolo/aeon-custody/vault/: functions.ts  structs.ts
ts/examples/yolo/aeon-custody/workspace/: functions.ts  structs.ts
ts/examples/yolo/amm/: index.ts  init.ts
ts/examples/yolo/amm/pool/: functions.ts  structs.ts
ts/examples/yolo/enm/: index.ts  init.ts
ts/examples/yolo/enm/test/: structs.ts  (+1 more)
ts/examples/yolo/examples/: index.ts  init.ts
ts/examples/yolo/sui/: init.ts
(+96 files in other folders)
