[package]
name = "sui-client-gen"
version = "0.3.2"
edition = "2021"

[dependencies]
tokio = "^1.36.0"
anyhow = "^1.0.71"
futures = "^0.3.28"
tempfile = "^3.5.0"
toml = "^0.5.11"
regex = "^1.8.1"
genco = "^0.17.8"
clap = "^4.4"
codespan-reporting = "^0.11.1"
convert_case = "^0.6.0"
colored = "^2.0.0"

sui-move-build = { git = "https://github.com/alexanderludwig/sui", rev = "13e0977" }
sui-move = { git = "https://github.com/alexanderludwig/sui", rev = "13e0977", features = [
    "build",
] }
sui-sdk = { git = "https://github.com/alexanderludwig/sui", rev = "13e0977" }
sui-json-rpc-types = { git = "https://github.com/alexanderludwig/sui", rev = "13e0977" }
move-model = { git = "https://github.com/alexanderludwig/sui", rev = "13e0977" }
move-core-types = { git = "https://github.com/alexanderludwig/sui", rev = "13e0977" }
move-binary-format = { git = "https://github.com/alexanderludwig/sui", rev = "13e0977" }
move-symbol-pool = { git = "https://github.com/alexanderludwig/sui", rev = "13e0977" }
move-bytecode-utils = { git = "https://github.com/alexanderludwig/sui", rev = "13e0977" }
move-compiler = { git = "https://github.com/alexanderludwig/sui", rev = "13e0977" }
move-package = { git = "https://github.com/alexanderludwig/sui", rev = "13e0977" }
move-command-line-common = { git = "https://github.com/alexanderludwig/sui", rev = "13e0977" }
